2012-12-29  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-handle-file-acl): Suppress basic attributes.
	(tramp-sh-handle-set-file-acl): Return `t' on success.

2012-12-29  Eli Zaretskii  <eliz@gnu.org>

	* files.el (backup-buffer-copy, basic-save-buffer-2): If
	set-file-extended-attributes fails, fall back on set-file-modes
	instead of signaling an error.  (Bug#13298)
	(basic-save-buffer): Likewise.

2012-12-29  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el: Support other commands triggering
	python-indent-line so indentation cycling continues to work.
	(python-indent-trigger-commands): New defcustom.
	(python-indent-line): Use it.

2012-12-29  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el (python-shell-send-region): Add blank lines
	for non sent code so backtraces remain correct.

2012-12-29  Fabián Ezequiel Gallina  <fgallina@cuca>

	* progmodes/python.el: Remove cl dependency.
	(python-syntax-count-quotes): Replace incf call.
	(python-fill-string): Replace setf call.

2012-12-29  Damien Cassou  <damien.cassou@gmail.com>

	* info.el (info-other-window): New arg, for consistency with info.

2012-12-28  Martin Rudalics  <rudalics@gmx.at>

	* mail/rmail.el (rmail-maybe-display-summary): Rewrite
	(Bug#13066).

2012-12-28  Andreas Schwab  <schwab@linux-m68k.org>

	* epg.el (epg--start): Modify process-environment locally.

2012-12-28  Daiki Ueno  <ueno@gnu.org>

	* epg.el: Support pinentry-curses.
	Suggested by Werner Koch in
	<http://lists.gnu.org/archive/html/emacs-devel/2007-02/msg00755.html>.
	(epg-agent-file, epg-agent-mtime): New variable.
	(epg--start): Record the modified time of gpg-agent socket file,
	to restore Emacs frame after pinentry-curses termination.
	(epg-wait-for-completion): Restore Emacs frame here.

2012-12-27  Juri Linkov  <juri@jurta.org>

	* info.el (Info-file-completions): New variable.
	(Info-read-node-name-1): Complete node names in the Info file