@@ -1,3 +1,11 @@
+2012-12-30  Michael Albinus  <michael.albinus@gmx.de>
+
+	* net/tramp-sh.el (tramp-sh-handle-set-file-selinux-context):
+	Return `t' on success.
+
+	* net/tramp-smb.el (tramp-smb-file-name-handler-alist): Add
+	handler for `set-file-selinux-context'.
+
 2012-12-29  Michael Albinus  <michael.albinus@gmx.de>
 
 	* net/tramp-sh.el (tramp-sh-handle-file-acl): Suppress basic attributes.
